fixed layout issue

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -57,7 +57,7 @@
   background-color: white;
   padding: 1rem;
   border-radius: 4px;
-  border-top: 4px solid var(--blue-040);
+  border-top: 4px solid #5cbdb9;
   margin-top: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
 }
